<resources>
    <string name="app_name">Join Sport</string>
    <string name="btn_get_started">Get Started</string>
    <string name="btn_login">Login</string>
    <string name="item_edit">Edit</string>
    <string name="item_delete">Hapus</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_update">Update</string>
    <string name="desc_appname">App Name</string>
    <string name="desc_ic_back">Icon of back button</string>
    <string name="desc_ic_send">Icon of send comment</string>
    <string name="desc_ic_settings">Icon of Settings</string>
    <string name="desc_ic_upload_img">Icon of upload img</string>
    <string name="desc_icon_of_upload_photo_profile">Icon of upload photo profile</string>
    <string name="desc_img_post_settings">Image of Posting Settings</string>
    <string name="desc_img_pp">Image of Photo Profile</string>
    <string name="desc_onboarding_header">Header</string>
    <string name="hint_confirm_password">Konfirmasi Password</string>
    <string name="hint_email">Email Anda</string>
    <string name="hint_fullname">Nama Lengkap</string>
    <string name="hint_location">Lokasi Anda</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">No Telp Anda</string>
    <string name="hint_write_comment">Tulis Komentars...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_account_name">Jessica Jones</string>
    <string name="txt_account_region">Jakarta</string>
    <string name="txt_already_have_account">Sudah punya akun ?</string>
    <string name="txt_caption">Caption</string>
    <string name="txt_comment">Komentar</string>
    <string name="txt_comment_name">Sanita R.</string>
    <string name="txt_detail_active">2h Ago</string>
    <string name="txt_detail_comment">Hello Everyone, How are you today? Hope you all fine and blessed everyday 😉</string>
    <string name="txt_detail_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor pellentesque quis tristique sem libero dignissim morbi. Turpis suscipit gravida integer morbi. Netus venenatis, consectetur lacus, cras. Vulputate orci magnis sed ipsum, vel interdum. Ac vitae eu nunc sapien leo.</string>
    <string name="txt_detail_post">Detail Post</string>
    <string name="txt_detail_place">Detail Tempat</string>
    <string name="txt_didnt_have_account">Belum punya akun ?</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_email">Email</string>
    <string name="txt_fullname">Nama Lengkap</string>
    <string name="txt_location">Lokasi</string>
    <string name="txt_location_jakarta">Jakarta</string>
    <string name="txt_log_in">Log In</string>
    <string name="txt_login">Login</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_lorem_ipsum2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor at nec dignissim scelerisque venenatis.</string>
    <string name="txt_max_size">(Max Size : 3MB)</string>
    <string name="txt_name_2">Aldebaran Reo</string>
    <string name="txt_new_post">Post Baru</string>
    <string name="txt_update_post">Update Post</string>
    <string name="txt_no_telp">No. Telp</string>
    <string name="txt_place">Places</string>
    <string name="txt_post_comment">98</string>
    <string name="txt_post_likes">325</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_register">Register</string>
    <string name="txt_settings">Pengaturan</string>
    <string name="txt_subwelcome">Kami mempertemukan anda \ndengan teman sehobi</string>
    <string name="txt_title">TITLE</string>
    <string name="txt_upload_img">Upload gambar \nanda</string>
    <string name="txt_upload_post">Upload Post</string>
    <string name="txt_welcome">Selamat\nDatang</string>
    <string name="txt_lbl_title">Judul</string>
    <string name="txt_lbl_address">Alamat</string>
</resources>