<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadPostActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        style="@style/TimelineName"
        android:text="@string/txt_new_post"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/incarnadine"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:shapeAppearance="@style/AllSideRounded">


        <ImageView
            android:id="@+id/iv_upload_img"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/desc_ic_upload_img"
            app:srcCompat="@drawable/ic_upload" />

        <TextView
            android:id="@+id/tv_upload_your_img"
            style="@style/TimelineName"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="0dp"
            android:text="@string/txt_upload_img"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_max_size"
            style="@style/TimelineName"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginTop="64dp"
            android:text="@string/txt_max_size"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray" />


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_caption"
        style="@style/Bold"
        android:text="@string/txt_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_caption"
        style="@style/CustomTextInput"
        android:layout_height="250dp"
        android:backgroundTint="#f6f6f6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_caption"
        app:placeholderText="Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit o"
        app:placeholderTextColor="#5c5c5c">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/CustomButton"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>