<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_photo_profile"
        style="@style/BasicPhotoProfile"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/desc_img_pp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_photo_profile_5" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TimelineName"
        android:text="@string/txt_name_2"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_photo_profile" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/Reguler"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/txt_location_jakarta"
        app:drawableLeftCompat="@drawable/ic_location"
        app:drawableTint="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/desc_ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_profile"
        app:srcCompat="@drawable/ic_setting" />

    <TextView
        android:id="@+id/tv_settings"
        style="@style/TimelineName"
        android:layout_width="0dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txt_settings"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_settings"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/iv_settings"
        app:layout_constraintTop_toTopOf="@+id/iv_settings" />

    <ImageView
        android:id="@+id/iv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/desc_ic_settings"
        app:layout_constraintEnd_toStartOf="@+id/tv_logout"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_profile"
        app:srcCompat="@drawable/ic_logout" />

    <TextView
        android:id="@+id/tv_logout"
        style="@style/TimelineName"
        android:layout_width="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txt_logout"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_logout"
        app:layout_constraintTop_toTopOf="@+id/iv_logout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/itemlist_post_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>
